src/objects/ID_Card_Application__c.object
<CustomObject>
    <description>Object that holds information on the application of a new/renew/reissue/replacement ID Card</description>
    <fields>
        <fullName>ASF_Completed_Travel_Courses__c</fullName>
        <description>Have you completed Travel Courses in your career?</description>
        <inlineHelpText>Have you completed Travel Courses in your career?</inlineHelpText>
        <label>Completed Travel Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Airline Training Program</label>
                </value>
                <value>
                    <fullName>HR</fullName>
                    <label>Hotel/Resort Training Program</label>
                </value>
                <value>
                    <fullName>CT</fullName>
                    <label>Cruise Training Program</label>
                </value>
                <value>
                    <fullName>GT</fullName>
                    <label>GDS Training Program</label>
                </value>
                <value>
                    <fullName>DT</fullName>
                    <label>Destination Training Program</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Current_Function__c</fullName>
        <description>What is your current function in your Agency?</description>
        <inlineHelpText>What is your current function in your Agency?</inlineHelpText>
        <label>Current Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>AF1</fullName>
                    <label>Booking Agent</label>
                </value>
                <value>
                    <fullName>AF2</fullName>
                    <label>Online Sales</label>
                </value>
                <value>
                    <fullName>AF3</fullName>
                    <label>Administration (IT, Finance...)</label>
                </value>
                <value>
                    <fullName>AF4</fullName>
                    <label>Marketing</label>
                </value>
                <value>
                    <fullName>AF5</fullName>
                    <label>Meeting planner</label>
                </value>
                <value>
                    <fullName>AF6</fullName>
                    <label>Sales Leisure</label>
                </value>
                <value>
                    <fullName>AF7</fullName>
                    <label>Sales Corporate</label>
                </value>
                <value>
                    <fullName>AF8</fullName>
                    <label>Ticketing</label>
                </value>
                <value>
                    <fullName>AF9</fullName>
                    <label>General Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_FAM_Trips__c</fullName>
        <description>How often do you participate to FAM Trips?</description>
        <inlineHelpText>How often do you participate to FAM Trips?</inlineHelpText>
        <label>FAM Trips</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>FT1</fullName>
                    <label>Multiple times a year</label>
                </value>
                <value>
                    <fullName>FT2</fullName>
                    <label>Once per year</label>
                </value>
                <value>
                    <fullName>FT3</fullName>
                    <label>Once every 2 years</label>
                </value>
                <value>
                    <fullName>FT4</fullName>
                    <label>Never</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Last_Completed_Travel_Course__c</fullName>
        <description>When was the last time you completed a Travel Course?</description>
        <inlineHelpText>When was the last time you completed a Travel Course?</inlineHelpText>
        <label>Last Completed Travel Course</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>TC1</fullName>
                    <label>Less than 1 year ago</label>
                </value>
                <value>
                    <fullName>TC2</fullName>
                    <label>Less than 2 years ago</label>
                </value>
                <value>
                    <fullName>TC3</fullName>
                    <label>Less than 5 years ago</label>
                </value>
                <value>
                    <fullName>TC4</fullName>
                    <label>Over 5 years ago</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Market_Focus__c</fullName>
        <description>Market Focus - Leisure vs Corporate</description>
        <inlineHelpText>Market Focus - Leisure vs Corporate</inlineHelpText>
        <label>Market Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>MF1</fullName>
                    <label>Leisure - 1 to 25%</label>
                </value>
                <value>
                    <fullName>MF2</fullName>
                    <label>Leisure - 25 to 50%</label>
                </value>
                <value>
                    <fullName>MF3</fullName>
                    <label>Leisure - 50 to 75%</label>
                </value>
                <value>
                    <fullName>MF4</fullName>
                    <label>Leisure - over 75%</label>
                </value>
                <value>
                    <fullName>MC1</fullName>
                    <label>Corporate - 1 to 25%</label>
                </value>
                <value>
                    <fullName>MC2</fullName>
                    <label>Corporate - 25 to 50%</label>
                </value>
                <value>
                    <fullName>MC3</fullName>
                    <label>Corporate - 50 to 75%</label>
                </value>
                <value>
                    <fullName>MC4</fullName>
                    <label>Corporate - over 75%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Market_Specialization_Comment__c</fullName>
        <label>Market Specialization Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASF_Market_Specialization__c</fullName>
        <description>What is you market specialization</description>
        <inlineHelpText>What is you market specialization</inlineHelpText>
        <label>Market Specialization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Adventure</label>
                </value>
                <value>
                    <fullName>CE</fullName>
                    <label>Conference / Exhibitions</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>CR</fullName>
                    <label>Cruises</label>
                </value>
                <value>
                    <fullName>ED</fullName>
                    <label>Educational</label>
                </value>
                <value>
                    <fullName>ET</fullName>
                    <label>Ethnic</label>
                </value>
                <value>
                    <fullName>FT</fullName>
                    <label>Family Travel</label>
                </value>
                <value>
                    <fullName>FH</fullName>
                    <label>Fitness/Health</label>
                </value>
                <value>
                    <fullName>GE</fullName>
                    <label>General</label>
                </value>
                <value>
                    <fullName>HD</fullName>
                    <label>Handicapped</label>
                </value>
                <value>
                    <fullName>HC</fullName>
                    <label>Historical/ Cultural</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>Incentive</label>
                </value>
                <value>
                    <fullName>LQ</fullName>
                    <label>LGBTQ</label>
                </value>
                <value>
                    <fullName>MC</fullName>
                    <label>Medical Travel</label>
                </value>
                <value>
                    <fullName>MI</fullName>
                    <label>Military</label>
                </value>
                <value>
                    <fullName>RE</fullName>
                    <label>Religious</label>
                </value>
                <value>
                    <fullName>RB</fullName>
                    <label>Resort/Beaches</label>
                </value>
                <value>
                    <fullName>RT</fullName>
                    <label>Romance Travel</label>
                </value>
                <value>
                    <fullName>SA</fullName>
                    <label>Safari</label>
                </value>
                <value>
                    <fullName>SE</fullName>
                    <label>Seniors</label>
                </value>
                <value>
                    <fullName>SI</fullName>
                    <label>Singles</label>
                </value>
                <value>
                    <fullName>SP</fullName>
                    <label>Sports</label>
                </value>
                <value>
                    <fullName>WT</fullName>
                    <label>Wellness Travel</label>
                </value>
                <value>
                    <fullName>OT</fullName>
                    <label>Other: Please Specify</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Percentage_of_Annual_Booking__c</fullName>
        <description>Percentage of annual bookings by sector</description>
        <inlineHelpText>Percentage of annual bookings by sector</inlineHelpText>
        <label>Percentage of Annual Booking</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>BA1</fullName>
                    <label>Air Travel - 1 to 25%          </label>
                </value>
                <value>
                    <fullName>BA2</fullName>
                    <label>Air Travel - 25 to 50%</label>
                </value>
                <value>
                    <fullName>BA3</fullName>
                    <label>Air Travel - 50 to 75%</label>
                </value>
                <value>
                    <fullName>BA4</fullName>
                    <label>Air Travel - over 75%</label>
                </value>
                <value>
                    <fullName>BL1</fullName>
                    <label>Land Travel - 1 to 25%</label>
                </value>
                <value>
                    <fullName>BL2</fullName>
                    <label>Land Travel - 25 to 50%</label>
                </value>
                <value>
                    <fullName>BL3</fullName>
                    <label>Land Travel - 50 to 75%</label>
                </value>
                <value>
                    <fullName>BL4</fullName>
                    <label>Land Travel - over 75%</label>
                </value>
                <value>
                    <fullName>BC1</fullName>
                    <label>Sea/Cruise - 1 to 25%</label>
                </value>
                <value>
                    <fullName>BC2</fullName>
                    <label>Sea/Cruise - 25 to 50%</label>
                </value>
                <value>
                    <fullName>BC3</fullName>
                    <label>Sea/Cruise - 50 to 75%</label>
                </value>
                <value>
                    <fullName>BC4</fullName>
                    <label>Sea/Cruise - over 75%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASF_Specializing_on_Destination__c</fullName>
        <description>Are you specializing on a Destination?</description>
        <inlineHelpText>Are you specializing on a Destination?</inlineHelpText>
        <label>Specializing on Destination</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>SA</fullName>
                    <label>South America</label>
                </value>
                <value>
                    <fullName>EY</fullName>
                    <label>Europe</label>
                </value>
                <value>
                    <fullName>ME</fullName>
                    <label>Middle East</label>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <label>Africa</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>Asia</label>
                </value>
                <value>
                    <fullName>OC</fullName>
                    <label>Oceania</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyShare_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agency Share Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_Fee__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <inlineHelpText>Pending: waiting for Mass Application creation
Unpaid: cards had been created but waiting for payment
Completed: Process is complete</inlineHelpText>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approving_Manager_s_Email__c</fullName>
        <label>Approving Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approving_Manager_s_Name__c</fullName>
        <label>Approving Manager&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>plastic</fullName>
                    <default>true</default>
                    <label>Plastic</label>
                </value>
                <value>
                    <fullName>digital</fullName>
                    <label>Digital</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Displayed_Name__c</fullName>
        <description>Entry of name as it should appear on the card</description>
        <label>Displayed Name on IDCard</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duties_Code__c</fullName>
        <formula>CASE(Duties_in_Current_Agency__c, 
&quot;*CNV DATA* NONE&quot;,&quot;-&quot;, 
&quot;ADMINISTRATION&quot;,&quot;A&quot;, 
&quot;Administration&quot;,&quot;A&quot;, 
&quot;INSIDE SALES&quot;,&quot;I&quot;, 
&quot;SALES&quot;,&quot;I&quot;, 
&quot;Sales&quot;,&quot;I&quot;, 
&quot;OUTSIDE SALES&quot;,&quot;X&quot;, 
&quot;LECTURER&quot;,&quot;L&quot;, 
&quot;MEMBERSHIP SUPPORT&quot;,&quot;M&quot;, 
&quot;SALES/MARKETING&quot;,&quot;N&quot;, 
&quot;MARKETING&quot;,&quot;N&quot;, 
&quot;Marketing&quot;,&quot;N&quot;, 
&quot;ACCOUNTING&quot;,&quot;O&quot;, 
&quot;Accounting&quot;,&quot;O&quot;, 
&quot;RESERVATIONS&quot;,&quot;R&quot;, 
&quot;Reservations&quot;,&quot;R&quot;, 
&quot;CUSTOMER SERVICE&quot;,&quot;S&quot;, 
&quot;Customer Services&quot;,&quot;S&quot;, 
&quot;TOUR GUIDE&quot;,&quot;T&quot;, 
&quot;OTHER DUTIES&quot;,&quot;V&quot;, 
&quot;Other Duties&quot;,&quot;V&quot;, 
&quot;OPERATIONS&quot;,&quot;O&quot;, 
&quot;Operations&quot;,&quot;O&quot;, 
&quot;WRITER&quot;,&quot;W&quot;, 
&quot; &quot;)</formula>
        <label>Duties Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duties_in_Current_Agency__c</fullName>
        <label>Duties in Current Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Reservations</fullName>
                </value>
                <value>
                    <fullName>Customer Services</fullName>
                </value>
                <value>
                    <fullName>Other Duties</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_admin__c</fullName>
        <label>Email (renewals, payments etc)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Worked_Code__c</fullName>
        <formula>CASE(Hours_worked__c, 
&quot;35 H OR MORE&quot;,&quot;1&quot;,
&quot;35 h or more&quot;,&quot;1&quot;,
&quot;35 HOURS OR OVER&quot;,&quot;1&quot;,
&quot;25 TO 34 HOURS&quot;,&quot;2&quot;,
&quot;25-34 h&quot;,&quot;2&quot;,
&quot;25-34 H&quot;,&quot;2&quot;,
&quot;20 TO 24 HOURS&quot;,&quot;3&quot;,
&quot;20-24 h&quot;,&quot;3&quot;,
&quot;20-24 H&quot;,&quot;3&quot;,
&quot;Less than 20 h&quot;,&quot;4&quot;,
&quot;LESS THAN 20 H&quot;,&quot;4&quot;,
&quot;LESS THAN 20 HOURS&quot;,&quot;4&quot;,
&quot; &quot;)</formula>
        <label>Hours Worked Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Worked_Validation_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hours Worked Validation Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_worked__c</fullName>
        <label>Hours worked</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>35 h or more</fullName>
                </value>
                <value>
                    <fullName>25-34 h</fullName>
                </value>
                <value>
                    <fullName>20-24 h</fullName>
                </value>
                <value>
                    <fullName>Less than 20 h</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <label>IATA Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Code_for_previous_agency__c</fullName>
        <label>IATA Code for previous agency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_numeric_code_previous_employer_1__c</fullName>
        <label>IATA numeric code previous employer 1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_numeric_code_previous_employer_2__c</fullName>
        <label>IATA numeric code previous employer 2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_numeric_code_previous_employer_3__c</fullName>
        <label>IATA numeric code previous employer 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDCard_Expedite_Delivery_Fee__c</fullName>
        <label>Expedite Delivery Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IDCard_Expedite_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IDCard Expedite Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDCard_Prefered_Language__c</fullName>
        <label>IDCard Prefered Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                    <label>en_US</label>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Fee_Discount__c</fullName>
        <description>Discount for the fee for the card.</description>
        <label>ID Card Fee Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ID_Card_Fee__c</fullName>
        <description>Fee for the card.</description>
        <label>ID Card Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ID_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID Card</label>
        <referenceTo>ID_Card__c</referenceTo>
        <relationshipLabel>ID Card Applications</relationshipLabel>
        <relationshipName>ID_Card_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ITDI_Courses_Fee__c</fullName>
        <description>ITTDI Courses Fee</description>
        <label>IATA Training Courses Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ITDI_Courses_Status__c</fullName>
        <label>IATA Training Courses Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Granted</fullName>
                </value>
                <value>
                    <fullName>Withdrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_order_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Coming with ID  Card v3: used to represent ID Card purchase for multi cards</description>
        <inlineHelpText>The Application used for purche</inlineHelpText>
        <label>Mass order Application</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Master Application should be a Mass order type Application</errorMessage>
            <filterItems>
                <field>ID_Card_Application__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Mass Order Application</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ID_Card_Application__c</referenceTo>
        <relationshipLabel>ID Card Applications</relationshipLabel>
        <relationshipName>ID_Card_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Request__c</fullName>
        <label>Mobile App Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Transaction_Id__c</fullName>
        <label>Mobile App Transaction Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_of_Travel_Professionals_Course_1__c</fullName>
        <description>IATA Package of Travel Professionals Course 1</description>
        <inlineHelpText>IATA Package of Travel Professionals Course 1</inlineHelpText>
        <label>IATA Training Course 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel Agency Fees - EN</fullName>
                </value>
                <value>
                    <fullName>Assist Travelers Special Needs - EN</fullName>
                </value>
                <value>
                    <fullName>Fundamentals Journey Pricing - EN</fullName>
                </value>
                <value>
                    <fullName>Notions essent&apos;l en tarif et billet - FR</fullName>
                </value>
                <value>
                    <fullName>Adv. Skills Journey Price&amp;Ticket - EN</fullName>
                </value>
                <value>
                    <fullName>Geography in Travel Planning - EN</fullName>
                </value>
                <value>
                    <fullName>Serving the Travel  Customer - EN</fullName>
                </value>
                <value>
                    <fullName>Le service au client voyageur - FR</fullName>
                </value>
                <value>
                    <fullName>Selling Intl Rail Transportation - EN</fullName>
                </value>
                <value>
                    <fullName>Social Media for Travel Industry - EN</fullName>
                </value>
                <value>
                    <fullName>Destination Geography - EN</fullName>
                </value>
                <value>
                    <fullName>Repricing, Exchange and Reissue - EN</fullName>
                </value>
                <value>
                    <fullName>Acc. &amp; Fin. Mgmt for agencies -EN</fullName>
                </value>
                <value>
                    <fullName>Intro to BSPLink - EN</fullName>
                </value>
                <value>
                    <fullName>BSP Agent Billing Reports &amp; Procedures - EN</fullName>
                </value>
                <value>
                    <fullName>BSP Agent Remittance Procedures - EN</fullName>
                </value>
                <value>
                    <fullName>BSP Essentials for Travel Agents - EN</fullName>
                </value>
                <value>
                    <fullName>BSP Standard Documents &amp; Procedures - EN</fullName>
                </value>
                <value>
                    <fullName>Intro to the BSP System &amp; Language - EN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_of_Travel_Professionals_Course_2__c</fullName>
        <description>IATA Package of Travel Professionals Course 2</description>
        <inlineHelpText>IATA Package of Travel Professionals Course 2</inlineHelpText>
        <label>IATA Training Course 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distribution &amp; Airlines Retailing with NDC - EN</fullName>
                </value>
                <value>
                    <fullName>Assist Travelers Special Needs - EN</fullName>
                </value>
                <value>
                    <fullName>Travel Agency Fees - EN</fullName>
                </value>
                <value>
                    <fullName>Fundamentals Journey Pricing - EN</fullName>
                </value>
                <value>
                    <fullName>Adv. Skills Journey Price&amp;Ticket - EN</fullName>
                </value>
                <value>
                    <fullName>Serving the Travel  Customer - EN</fullName>
                </value>
                <value>
                    <fullName>Selling Intl Rail Transportation - EN</fullName>
                </value>
                <value>
                    <fullName>Destination Geography - EN</fullName>
                </value>
                <value>
                    <fullName>Acc. &amp; Fin. Mgmt for agencies -EN</fullName>
                </value>
                <value>
                    <fullName>Intro to BSPLink - EN</fullName>
                </value>
                <value>
                    <fullName>BSP Agent Billing Reports &amp; Procedures - EN</fullName>
                </value>
                <value>
                    <fullName>BSP Agent Remittance Procedures - EN</fullName>
                </value>
                <value>
                    <fullName>BSP Essentials for Travel Agents - EN</fullName>
                </value>
                <value>
                    <fullName>BSP Standard Documents &amp; Procedures - EN</fullName>
                </value>
                <value>
                    <fullName>Intro to the BSP System &amp; Language - EN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>Amount of the Cyber Source payment</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Credit_Card_Number__c</fullName>
        <description>Masked credit card number of the CyberSource payment</description>
        <label>Credit Card Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Currency__c</fullName>
        <label>Payment Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>Date of the CyberSource payment</description>
        <label>Payment Date</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Transaction_Number__c</fullName>
        <description>Transaction # of the Cyber Source payment</description>
        <label>Transaction Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Key Account</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>